[gd_scene load_steps=5 format=3 uid="uid://map_desert"]

[ext_resource type="Script" path="res://scenes/maps/map_desert.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://enemy_scene" path="res://scenes/enemy.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://portal_scene" path="res://scenes/portal.tscn" id="3"]
[ext_resource type="Script" path="res://systems/camera_system.gd" id="4"]
[ext_resource type="Script" path="res://systems/game_hud.gd" id="5"]

[node name="MapDesert" type="Node2D"]
script = ExtResource("1")

[node name="Ground" type="ColorRect" parent="."]
offset_left = -800.0
offset_top = -600.0
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.9, 0.7, 0.3, 1)

[node name="MapLabel" type="Label" parent="."]
offset_left = -100.0
offset_top = -550.0
offset_right = 100.0
offset_bottom = -520.0
text = "DÉSERT DORÉ"
horizontal_alignment = 1

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy1" parent="Enemies" instance=ExtResource("2")]
position = Vector2(250, -100)

[node name="Enemy2" parent="Enemies" instance=ExtResource("2")]
position = Vector2(-200, 150)

[node name="Enemy3" parent="Enemies" instance=ExtResource("2")]
position = Vector2(350, 200)

[node name="Enemy4" parent="Enemies" instance=ExtResource("2")]
position = Vector2(-300, -180)

[node name="Enemy5" parent="Enemies" instance=ExtResource("2")]
position = Vector2(0, 300)

[node name="Enemy6" parent="Enemies" instance=ExtResource("2")]
position = Vector2(150, -250)

[node name="Portals" type="Node2D" parent="."]

[node name="PortalFromForest" parent="Portals" instance=ExtResource("3")]
position = Vector2(-600, 0)
target_map = "map_forest"
target_portal_id = "portal_to_desert"
portal_id = "portal_from_forest"
portal_color = Color(0.3, 0.8, 0.3, 0.7)

[node name="PortalToCave" parent="Portals" instance=ExtResource("3")]
position = Vector2(600, 0)
target_map = "map_cave"
target_portal_id = "portal_from_desert"
portal_id = "portal_to_cave"
portal_color = Color(0.3, 0.3, 0.3, 0.7)

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5")

[node name="HealthBarBG" type="ColorRect" parent="HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0

[node name="HealthBarFill" type="ColorRect" parent="HUD/HealthBarBG"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 30.0

[node name="HealthText" type="Label" parent="HUD/HealthBarBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100 HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BodyXPBarBG" type="ColorRect" parent="HUD"]
offset_left = 20.0
offset_top = 60.0
offset_right = 420.0
offset_bottom = 85.0

[node name="Fill" type="ColorRect" parent="HUD/BodyXPBarBG"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 25.0

[node name="Label" type="Label" parent="HUD/BodyXPBarBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Corps Niv.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackXPBarBG" type="ColorRect" parent="HUD"]
offset_left = 20.0
offset_top = 95.0
offset_right = 420.0
offset_bottom = 120.0

[node name="Fill" type="ColorRect" parent="HUD/AttackXPBarBG"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 25.0

[node name="Label" type="Label" parent="HUD/AttackXPBarBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Attaque Niv.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BodyStatsButton" type="Button" parent="HUD"]
offset_left = 20.0
offset_top = 130.0
offset_right = 180.0
offset_bottom = 165.0
text = "Stats Corps [PgUp]"

[node name="AttackStatsButton" type="Button" parent="HUD"]
offset_left = 190.0
offset_top = 130.0
offset_right = 370.0
offset_bottom = 165.0
text = "Stats Attaque [PgDn]"

[node name="MapNameLabel" type="Label" parent="HUD"]
offset_left = 600.0
offset_top = 20.0
offset_right = 780.0
offset_bottom = 50.0
text = "Carte: Désert"
horizontal_alignment = 2

[node name="Instructions" type="Label" parent="HUD"]
offset_left = 20.0
offset_top = 550.0
offset_right = 600.0
offset_bottom = 595.0
text = "WASD: Déplacer | ESPACE: Attaque | Entrez dans les portails pour voyager !"
